[tool.poetry]
name = "tledger_agent_toolkit"
version = "0.1.0"
description = "tledger Agent Toolkit"
authors = ["Prateek Tiwari <ptiwari@t54.ai>"]
license = "MIT"
packages = [{ include = "agent/tledger_agent_toolkit/game_virtuals/TledgerAgentToolkit.py" }]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


